# dissertation

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pytask.sqlite3  Pipfile  README.md  codebook.toml  nuget.config  pyproject.toml  pyroject.toml  ruff.toml  tex-fmt.toml
.pytask/: file_hashes.json  pytask.sqlite3
data/: material_data.json
dissertation/: .gitignore  _symbol_index.tex  _symbols.sty  abbreviations.bib  config.py  diss.cls  dissertation.tex  latexmkrc  list_of_symbols.tex  refs.bib  slides.tex  symbols.toml  task_build_latex.py  task_process_jinja.py  task_symbols.py  task_textext_preamble.py  textext_preamble.tex
dissertation/chapters/introduction/: index.tex
dissertation/chapters/model_development/: index.tex
dissertation/chapters/model_validation/: index.tex
dissertation/chapters/summary_and_outlook/: index.tex
dissertation/data/morphology/: batches.py  shape_function.py  task_fit_morphology.py  task_plot_morphology_histograms.py
dissertation/img/: task_mermaid.py  task_task_convert_dxf_source.py  task_task_convert_svg_source.py
dissertation/img/implementation/: solution_algorithm.mmd
dissertation/notebooks/: contact_cartesian.ipynb  contact_equations.ipynb  contact_equations_dist_dir.ipynb  contact_equations_rot.ipynb  ring.ipynb
dissertation/sim/packings/: Input.cs  Program.cs  (+6 more)
dissertation/tex/: aim_and_scope.tex  appendix.tex  basic_theory.tex  conclusions_and_outlook.tex  crafted_cases.tex  experimental_validation.tex  implementation.tex  independence.tex  interface_model.tex  introduction.tex  model_development.tex  model_validation.tex  multiscale_approach.tex  numerical_behavior.tex  numerical_methods.tex  particle_model.tex  physical_behavior.tex  powder.tex  preface.tex  randomized_simulations.tex  sintering_introduction.tex  statistical_powder_modeling.tex  statistical_powder_modelling.tex  summary.tex  tep_application.tex
notebooks/: contact_equations_dist_dir.md  contact_equations_rot.md  diffusion_coefficents.ipynb  diffusion_coefficients.ipynb  dihedral_angle.ipynb  element_geometry.ipynb  ellipse_particle.ipynb  node_shift_global.md  node_shift_normal.ipynb  node_shift_normal.md  node_shift_tangential.ipynb  node_shift_tangential.md  randomized_effect.ipynb  ring.ipynb  ring.md  step_estimation_neck.ipynb
nuget/: RefraSin.Analysis.1.0.0.nupkg  RefraSin.Compaction.1.0.0.nupkg  RefraSin.Coordinates.1.0.0.nupkg  RefraSin.Enumerables.1.0.0.nupkg  RefraSin.Graphs.1.0.0.nupkg  RefraSin.MaterialData.1.0.0.nupkg  RefraSin.Numerics.1.0.0.nupkg  RefraSin.Numerics.1.1.0.nupkg  RefraSin.ParquetStorage.1.0.0.nupkg  RefraSin.ParticleModel.1.0.0.nupkg  RefraSin.ParticleModel.2.0.0.nupkg  RefraSin.Plotting.1.0.0.nupkg  RefraSin.ProcessModel.1.0.0.nupkg  RefraSin.ProcessModel.2.0.0.nupkg  RefraSin.Storage.1.0.0.nupkg  RefraSin.TEPSolver.1.0.0.nupkg  RefraSin.TEPSolver.2.0.0.nupkg
tubaf/: imf-logo.sty  tubaf-beamer.cls  tubaf-color.sty  tubaf-fonts.sty  tubaf-logo.sty  tubaf-logoext-faculty-five.sty  tubaf-marks.sty  tubaf-report.cls  tubaf-thesis.cls  tubaf-title.sty  tubaf-trapezoid.sty
(+629 files in other folders)
