[project]
name = "dissertation"
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" },
]
description = "LaTeX project for doctoral thesis (dissertation)"
version = "0"

dependencies = [
    "pytask ~= 0.4.0",
    "pytask-latex ~= 0.4.0",
    "matplotlib ~= 3.8",
    "plotly ~= 5.20",
    "numpy ~= 1.26",
    "pandas ~= 2.1",
    "schemdraw ~= 0.17",
    "scipy ~= 1.11",
    "sympy ~= 1.12",
    "tomlkit ~= 0.12",
    "coconut"
]

[tool.pytask.ini_options]
editor_url_scheme = "pycharm"
paths = ["dissertation"]

[tool.hatch]

[tool.hatch.build]
packages = ["dissertation"]

[tool.hatch.env]
requires = [
    "hatch-pip-compile"
]

[tool.hatch.envs.default]
type = "pip-compile"
path = ".venv"
lock-filename = "default.lock"
pip-compile-hashes = true
dependencies = [
    "jupyter",
    "jupyterlab",
    "python-lsp-server ~= 1.9",
]

[tool.hatch.envs.default.scripts]
build = "python -m pytask"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
