[project]
name = "dissertation"
authors = [{ name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" }]
description = "LaTeX project for doctoral thesis (dissertation)"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "pytask ~= 0.5.0",
    "pytask-latex",
    "matplotlib ~= 3.8",
    "plotly ~= 5.20",
    "numpy ~= 2.0",
    "pandas ~= 2.1",
    "pyarrow ~= 18.0",
    "schemdraw ~= 0.17",
    "scipy ~= 1.11",
    "sympy ~= 1.12",
    "tomlkit ~= 0.12",
    "jupyter",
    "pydantic ~= 2.0",
    "deepdiff ~= 8.0",
    "jupytext~=1.16",
    "pytask-parallel>=0.5.0",
]

[tool.pytask.ini_options]
editor_url_scheme = "pycharm"
paths = ["dissertation"]
ignore = ["**/.*", "**/_*"]

[tool.pytask.ini_options.markers]
sim = "Simulation task"
plot = "Plot task"

[tool.hatch.build]
packages = ["dissertation"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
